--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
       --board-border: 4px;
       --board-border-color: #000;
       --board-radius: clamp(14px, 2.2vmin, 22px);
+
+      /* Button */
+      --btn-bg: #ead7be;
+      --btn-text: #2a160c;
+      --btn-border: rgba(0,0,0,0.35);
     }
 
     html, body { height: 100%; }
@@ -76,8 +81,10 @@
       width: min(94vw, 680px);
       margin-top: 14vh;
       display:flex;
-      justify-content:center;
-      align-items:flex-start;
+      flex-direction: column;
+      gap: 14px;
+      justify-content:flex-start;
+      align-items:center;
     }
 
     .board{
@@ -97,11 +104,24 @@
       /* Zellmaß als Variable */
       --cell: calc((100% - 7 * var(--cell-gap)) / 8);
 
+      /* Würfel-Position (wird per JS gesetzt) */
+      --cube-x: calc(var(--cell) + var(--cell-gap));
+      --cube-y: calc(var(--cell) + var(--cell-gap));
+
+      /* Schatten-Rotation (wird per Klasse q0..q3 gesetzt) */
+      --shadow-rot: 0deg;
+
       /* Außenschatten des Rahmens/der Box auf den Tisch */
       box-shadow:
         10px 18px 42px rgba(0,0,0,0.55),
         3px 6px 16px rgba(0,0,0,0.35);
     }
+
+    /* Quadranten => Schatten dreht sich, sodass er immer auf den INNENKANTEN liegt */
+    .board.q0{ --shadow-rot: 0deg; }
+    .board.q1{ --shadow-rot: 90deg; }
+    .board.q2{ --shadow-rot: 180deg; }
+    .board.q3{ --shadow-rot: 270deg; }
 
     .grid{
       position:absolute;
@@ -142,18 +162,14 @@
       z-index: 2;
       pointer-events: none;
 
-      /* ✅ Update: gleicher tiefer Innenschatten auf ALLEN 4 Innenkanten */
       box-shadow:
-        /* deine bisherigen Innenraum-Facetten */
         inset 14px 14px 26px rgba(255,255,255,0.14),
         inset -18px -18px 34px rgba(0,0,0,0.22),
         inset 0 0 0 1px rgba(0,0,0,0.12),
-
-        /* Schatten rundum innen (gleich tief) */
-        inset -22px 0 34px rgba(0,0,0,0.30),  /* rechts innen */
-        inset  22px 0 34px rgba(0,0,0,0.30),  /* links innen */
-        inset  0 -22px 34px rgba(0,0,0,0.34), /* unten innen */
-        inset  0  22px 34px rgba(0,0,0,0.34); /* oben innen */
+        inset -22px 0 34px rgba(0,0,0,0.30),
+        inset  22px 0 34px rgba(0,0,0,0.30),
+        inset  0 -22px 34px rgba(0,0,0,0.34),
+        inset  0  22px 34px rgba(0,0,0,0.34);
     }
 
     .ball{
@@ -186,8 +202,8 @@
 
     .cube{
       position:absolute;
-      left: calc(var(--cell) + var(--cell-gap));
-      top:  calc(var(--cell) + var(--cell-gap));
+      left: var(--cube-x);
+      top:  var(--cube-y);
 
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
@@ -216,6 +232,27 @@
       pointer-events: none;
     }
 
+    /* ✅ Schatten-Ebene am Würfel: immer Innenkanten, Rotation je Quadrant */
+    .cube::after{
+      content:"";
+      position:absolute;
+      inset: 0;
+      border-radius: inherit;
+      pointer-events: none;
+      z-index: 6;
+
+      background:
+        linear-gradient(90deg,  rgba(0,0,0,0.24), rgba(0,0,0,0.0) 26%),
+        linear-gradient(180deg, rgba(0,0,0,0.24), rgba(0,0,0,0.0) 26%);
+
+      /* nahe am Boden => wenig weich */
+      filter: blur(1px);
+      opacity: 0.95;
+
+      transform-origin: 50% 50%;
+      transform: rotate(var(--shadow-rot));
+    }
+
     .slot{
       position:absolute;
       width: var(--cell);
@@ -239,16 +276,45 @@
         2px 2px 3px -1px rgba(0,0,0,0.20);
     }
 
-    .slot-2c{ left: calc(2 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
-    .slot-2d{ left: calc(3 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
-    .slot-3b{ left: calc(1 * (var(--cell) + var(--cell-gap))); top:  calc(2 * (var(--cell) + var(--cell-gap))); }
-    .slot-4b{ left: calc(1 * (var(--cell) + var(--cell-gap))); top:  calc(3 * (var(--cell) + var(--cell-gap))); }
+    /* Slots: Position relativ zur Würfel-Position */
+    .slot-2c{ left: calc(var(--cube-x) + 1 * (var(--cell) + var(--cell-gap))); top:  calc(var(--cube-y) + 0 * (var(--cell) + var(--cell-gap))); }
+    .slot-2d{ left: calc(var(--cube-x) + 2 * (var(--cell) + var(--cell-gap))); top:  calc(var(--cube-y) + 0 * (var(--cell) + var(--cell-gap))); }
+    .slot-3b{ left: calc(var(--cube-x) + 0 * (var(--cell) + var(--cell-gap))); top:  calc(var(--cube-y) + 1 * (var(--cell) + var(--cell-gap))); }
+    .slot-4b{ left: calc(var(--cube-x) + 0 * (var(--cell) + var(--cell-gap))); top:  calc(var(--cube-y) + 2 * (var(--cell) + var(--cell-gap))); }
+
+    /* Button */
+    .controls{
+      width: 100%;
+      display:flex;
+      justify-content:center;
+      padding: 0 6px;
+    }
+    .btn{
+      border: 1px solid var(--btn-border);
+      background: var(--btn-bg);
+      color: var(--btn-text);
+      font-weight: 900;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+      padding: 12px 16px;
+      border-radius: 14px;
+      cursor: pointer;
+      box-shadow:
+        0 10px 18px rgba(0,0,0,0.25),
+        0 0 0 1px rgba(255,255,255,0.15) inset;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+    }
+    .btn:active{
+      transform: translateY(1px) scale(0.99);
+      filter: brightness(0.97);
+    }
   </style>
 </head>
 
 <body>
   <div class="stage">
-    <div class="board" id="board">
+    <div class="board q0" id="board">
       <div class="floor" aria-hidden="true"></div>
       <div class="ball" aria-label="Kugel"></div>
 
@@ -256,32 +322,29 @@
 
       <div class="cube" aria-label="Würfel"></div>
 
+      <!-- Slots (noch leer, keine Zahlen) -->
       <div class="slot slot-2c" aria-label="Slot 2C"></div>
       <div class="slot slot-2d" aria-label="Slot 2D"></div>
       <div class="slot slot-3b" aria-label="Slot 3B"></div>
       <div class="slot slot-4b" aria-label="Slot 4B"></div>
+    </div>
+
+    <!-- ✅ Button unter der Box -->
+    <div class="controls">
+      <button id="btnBestuecken" class="btn">Würfel bestücken</button>
     </div>
   </div>
 
   <script>
     const boardEl = document.getElementById("board");
 
+    // ======= Quadrat erzwingen (Höhe = Breite) =======
     function setBoardSquare(){
       const w = Math.round(boardEl.getBoundingClientRect().width);
       boardEl.style.height = w + "px";
     }
 
-    window.addEventListener("load", () => {
-      setBoardSquare();
-      requestAnimationFrame(setBoardSquare);
-      setTimeout(setBoardSquare, 80);
-    });
-
-    window.addEventListener("resize", () => {
-      setBoardSquare();
-      requestAnimationFrame(setBoardSquare);
-    });
-
+    // ======= Raster bauen =======
     const cols = ["A","B","C","D","E","F","G","H"];
     const grid = document.getElementById("grid");
 
@@ -309,19 +372,70 @@
       [key(1,"C"), "c-violett"],
     ]);
 
-    for(let r=1; r<=8; r++){
-      for(let c=0; c<8; c++){
-        const cell = document.createElement("div");
-        cell.className = "cell";
-
-        const coord = key(r, cols[c]);
-        if(colorMap.has(coord)){
-          cell.classList.add(colorMap.get(coord));
+    function buildGridOnce(){
+      if (grid.dataset.built === "1") return;
+      for(let r=1; r<=8; r++){
+        for(let c=0; c<8; c++){
+          const cell = document.createElement("div");
+          cell.className = "cell";
+          const coord = key(r, cols[c]);
+          if(colorMap.has(coord)){
+            cell.classList.add(colorMap.get(coord));
+          }
+          grid.appendChild(cell);
         }
-
-        grid.appendChild(cell);
       }
+      grid.dataset.built = "1";
     }
+
+    // ======= Würfel in Ecke setzen (Q0..Q3) =======
+    let currentQ = 0;
+
+    function applyQuadrant(q){
+      currentQ = q;
+
+      boardEl.classList.remove("q0","q1","q2","q3");
+      boardEl.classList.add("q"+q);
+
+      // cell und gap in px aus CSS ziehen
+      const cs = getComputedStyle(boardEl);
+      const cellPx = parseFloat(cs.getPropertyValue("--cell")) || 0;
+      const gapPx  = parseFloat(cs.getPropertyValue("--cell-gap")) || 0;
+
+      const step = cellPx + gapPx; // eine Rastereinheit
+
+      // in den 6×6 Innenraum-Ecken: Start bei 1*step oder 4*step
+      const left = (q === 0 || q === 3) ? 1 * step : 4 * step; // links / rechts
+      const top  = (q === 0 || q === 1) ? 1 * step : 4 * step; // oben / unten
+
+      boardEl.style.setProperty("--cube-x", left + "px");
+      boardEl.style.setProperty("--cube-y", top  + "px");
+    }
+
+    // ======= Button: Würfel bestücken (nur Position + Schatten) =======
+    const btn = document.getElementById("btnBestuecken");
+    btn.addEventListener("click", () => {
+      const q = Math.floor(Math.random() * 4); // 0..3
+      applyQuadrant(q);
+      // Zahlen/Bestückung kommt erst im nächsten Schritt – hier bleibt alles leer.
+    });
+
+    // ======= Init =======
+    window.addEventListener("load", () => {
+      setBoardSquare();
+      requestAnimationFrame(setBoardSquare);
+      setTimeout(setBoardSquare, 80);
+
+      buildGridOnce();
+      applyQuadrant(0); // Start ruhig Q0
+    });
+
+    window.addEventListener("resize", () => {
+      setBoardSquare();
+      requestAnimationFrame(setBoardSquare);
+      // nach Resize Quadrant neu berechnen, damit Würfel sauber sitzt
+      applyQuadrant(currentQ);
+    });
   </script>
 </body>
 </html>
