--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KIPP – Schritt 1 (Canvas, W1 gespiegelt)</title>
+  <title>KIPP – Zwei Flächen (statisch)</title>
 
   <style>
     :root{
@@ -16,6 +16,16 @@
       --cell-radius: clamp(6px, 1.1vmin, 12px);
 
       --floor: #7a4a34;
+      --cube-border: #7a4a34;
+
+      --cube-wood-base: #d7c2a4;
+      --cube-wood-deep: #c9b08f;
+      --cube-wood-warm: rgba(155, 70, 110, 0.10);
+      --cube-wood-gold: rgba(249, 150, 30, 0.10);
+
+      --slot-border: rgba(0,0,0,0.55);
+      --slot-border-w: 2px;
+      --slot-fill: #ead7be;
 
       --board-border: 4px;
       --board-border-color: #000;
@@ -23,6 +33,7 @@
     }
 
     html, body { height: 100%; }
+
     body{
       margin:0;
       display:flex;
@@ -54,8 +65,9 @@
       margin-top: 14vh;
       display:flex;
       flex-direction: column;
-      align-items:center;
       gap: 14px;
+      justify-content:flex-start;
+      align-items:center;
     }
 
     .board{
@@ -66,6 +78,7 @@
       box-sizing: border-box;
 
       background: #0b0b0b;
+
       border: var(--board-border) solid var(--board-border-color);
       border-radius: var(--board-radius);
 
@@ -110,9 +123,12 @@
       top:  var(--step);
       width: calc(6 * var(--cell) + 5 * var(--cell-gap));
       height: calc(6 * var(--cell) + 5 * var(--cell-gap));
+
       background:
         linear-gradient(135deg, rgba(255,255,255,0.18), rgba(0,0,0,0.06)),
         var(--floor);
+
+      border-radius: 0;
       z-index: 2;
       pointer-events: none;
 
@@ -143,12 +159,59 @@
       pointer-events: none;
     }
 
-    /* Canvas liegt über Boden & Grid */
-    canvas#w1Canvas{
+    /* Würfelfläche */
+    .cube{
       position:absolute;
-      inset:0;
+      width: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      height: calc(3 * var(--cell) + 2 * var(--cell-gap));
+      box-sizing: border-box;
+
+      background:
+        radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
+        radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
+        repeating-linear-gradient(
+          20deg,
+          rgba(0,0,0,0.02) 0px,
+          rgba(0,0,0,0.02) 10px,
+          rgba(255,255,255,0.02) 10px,
+          rgba(255,255,255,0.02) 18px
+        ),
+        linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
+        linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
+
+      border: 4px solid var(--cube-border);
+      border-radius: clamp(10px, 2.2vmin, 18px);
+
+      box-shadow:
+        0 12px 22px rgba(0,0,0,0.28),
+        0 0 0 1px rgba(255,255,255,0.10) inset;
+
       z-index: 5;
-      pointer-events:none;
+      pointer-events: none;
+    }
+
+    /* Slots */
+    .slot{
+      position:absolute;
+      width: var(--cell);
+      height: var(--cell);
+      box-sizing: border-box;
+
+      background:
+        linear-gradient(135deg, rgba(255,255,255,0.14), rgba(0,0,0,0.05)),
+        var(--slot-fill);
+
+      border: var(--slot-border-w) solid var(--slot-border);
+      border-radius: var(--cell-radius);
+
+      z-index: 7;
+      pointer-events: none;
+
+      box-shadow:
+        1px 1px 0 rgba(255,255,255,0.18) inset,
+        -1px -1px 0 rgba(0,0,0,0.08) inset,
+        0 3px 5px rgba(0,0,0,0.22),
+        2px 2px 3px -1px rgba(0,0,0,0.20);
     }
   </style>
 </head>
@@ -158,27 +221,42 @@
     <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
       <div class="ball" aria-label="Kugel"></div>
-
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- ✅ W1 wird sauber per Canvas gerendert -->
-      <canvas id="w1Canvas"></canvas>
+      <!-- W1 in Q0 (B2) -->
+      <div class="cube" id="cubeW1"></div>
+
+      <!-- W2 in Q1 (E2) -->
+      <div class="cube" id="cubeW2"></div>
+
+      <!-- Slots werden per JS exakt auf Raster-Koordinaten gesetzt -->
+      <div class="slot" data-pos="2C"></div>
+      <div class="slot" data-pos="2D"></div>
+
+      <div class="slot" data-pos="2E"></div>
+      <div class="slot" data-pos="2F"></div>
+
+      <div class="slot" data-pos="3E"></div>
+      <div class="slot" data-pos="4E"></div>
+
+      <div class="slot" data-pos="3D"></div>
+      <div class="slot" data-pos="4D"></div>
     </div>
   </div>
 
   <script>
-    // ====== Einstellungen ======
-    const MIRROR_W1 = true; // true = W1 in sich links↔rechts gespiegelt (um eigene senkrechte Mittelachse)
+    const boardEl = document.getElementById("board");
+    const grid = document.getElementById("grid");
 
-    const boardEl  = document.getElementById("board");
-    const gridEl   = document.getElementById("grid");
-    const canvas   = document.getElementById("w1Canvas");
-    const ctx      = canvas.getContext("2d");
+    const cubeW1 = document.getElementById("cubeW1");
+    const cubeW2 = document.getElementById("cubeW2");
+    const slotEls = Array.from(document.querySelectorAll(".slot"));
 
-    // ----- Board-Farbzellen -----
+    // Raster: Spalten A..H, Zeilen 1..8
     const cols = ["A","B","C","D","E","F","G","H"];
-    function key(r, cLetter){ return `${r}${cLetter}`; }
+    function colIndex(letter){ return cols.indexOf(letter); }
 
+    function key(r, cLetter){ return `${r}${cLetter}`; }
     const colorMap = new Map([
       [key(3,"A"), "c-orange"],
       [key(4,"A"), "c-gruen"],
@@ -202,208 +280,71 @@
     ]);
 
     function buildGridOnce(){
-      if (gridEl.dataset.built === "1") return;
+      if (grid.dataset.built === "1") return;
       for(let r=1; r<=8; r++){
         for(let c=0; c<8; c++){
           const cell = document.createElement("div");
           cell.className = "cell";
           const coord = key(r, cols[c]);
           if(colorMap.has(coord)) cell.classList.add(colorMap.get(coord));
-          gridEl.appendChild(cell);
+          grid.appendChild(cell);
         }
       }
-      gridEl.dataset.built = "1";
+      grid.dataset.built = "1";
     }
 
-    // ----- Helpers für CSS-Variablen in Pixel -----
+    function setBoardSquare(){
+      const w = Math.round(boardEl.getBoundingClientRect().width);
+      boardEl.style.height = w + "px";
+    }
+
     function getPxVar(name){
       const v = getComputedStyle(boardEl).getPropertyValue(name).trim();
       return parseFloat(v) || 0;
     }
 
-    function resizeCanvasToBoard(){
-      const rect = boardEl.getBoundingClientRect();
-      const dpr  = window.devicePixelRatio || 1;
-
-      canvas.width  = Math.round(rect.width  * dpr);
-      canvas.height = Math.round(rect.height * dpr);
-      canvas.style.width  = rect.width + "px";
-      canvas.style.height = rect.height + "px";
-
-      ctx.setTransform(dpr, 0, 0, dpr, 0, 0); // in CSS-Pixeln zeichnen
-      ctx.clearRect(0, 0, rect.width, rect.height);
+    function cellTopLeft(pos){
+      // pos z.B. "2E"
+      const row = parseInt(pos.slice(0, -1), 10); // 2
+      const col = pos.slice(-1);                  // E
+      const step = getPxVar("--step");
+      const x = colIndex(col) * step;
+      const y = (row - 1) * step;
+      return { x, y };
     }
 
-    // ====== W1 Zeichnen (Canvas) ======
-    function drawRoundedRect(x, y, w, h, r){
-      const rr = Math.min(r, w/2, h/2);
-      ctx.beginPath();
-      ctx.moveTo(x+rr, y);
-      ctx.arcTo(x+w, y,   x+w, y+h, rr);
-      ctx.arcTo(x+w, y+h, x,   y+h, rr);
-      ctx.arcTo(x,   y+h, x,   y,   rr);
-      ctx.arcTo(x,   y,   x+w, y,   rr);
-      ctx.closePath();
-    }
-
-    function drawW1(){
-      const rect = boardEl.getBoundingClientRect();
-      const cell = getPxVar("--cell");
-      const gap  = getPxVar("--cell-gap");
+    function placeStatic(){
       const step = getPxVar("--step");
 
-      // Q0 Position wie bei dir: cube-col=1, cube-row=1
-      const cubeCol = 1;
-      const cubeRow = 1;
-      const cubeX = cubeCol * step;
-      const cubeY = cubeRow * step;
+      // Würfelfläche W1 in Q0 = B2
+      const pW1 = cellTopLeft("2B");
+      cubeW1.style.left = pW1.x + "px";
+      cubeW1.style.top  = pW1.y + "px";
 
-      const cubeSize = 3 * cell + 2 * gap;
-      const radius   = Math.min(18, Math.max(10, cubeSize * 0.08)); // optisch ähnlich
-      const borderW  = 4;
+      // Würfelfläche W2 in Q1 = E2
+      const pW2 = cellTopLeft("2E");
+      cubeW2.style.left = pW2.x + "px";
+      cubeW2.style.top  = pW2.y + "px";
 
-      // Slot Maße (wie vorher)
-      const slotSize = cell;
-      const slotR    = Math.min(12, Math.max(6, slotSize * 0.22));
-      const slotBorderW = 2;
-
-      // Slot-Positionen relativ in Q0 (wie zuvor)
-      const slots = [
-        // oben Reihe (2c,2d)
-        { x: cubeX + 1*step, y: cubeY + 0*step },
-        { x: cubeX + 2*step, y: cubeY + 0*step },
-        // links Spalte (3b,4b)
-        { x: cubeX + 0*step, y: cubeY + 1*step },
-        { x: cubeX + 0*step, y: cubeY + 2*step },
-      ];
-
-      // Spiegelung um eigene senkrechte Mittelachse von W1:
-      // -> Canvas: um cx/cy von W1 spiegeln (scale(-1,1))
-      const cx = cubeX + cubeSize/2;
-      const cy = cubeY + cubeSize/2;
-
-      ctx.save();
-      if (MIRROR_W1){
-        ctx.translate(cx, cy);
-        ctx.scale(-1, 1);
-        ctx.translate(-cx, -cy);
+      // Slots exakt aufs Raster
+      for (const s of slotEls){
+        const p = cellTopLeft(s.dataset.pos);
+        s.style.left = p.x + "px";
+        s.style.top  = p.y + "px";
       }
-
-      // Schatten unter W1 (leicht)
-      ctx.save();
-      ctx.shadowColor = "rgba(0,0,0,0.28)";
-      ctx.shadowBlur  = 18;
-      ctx.shadowOffsetX = 12;
-      ctx.shadowOffsetY = 12;
-      ctx.fillStyle = "rgba(0,0,0,0.01)"; // nur Schatten "tragen"
-      drawRoundedRect(cubeX, cubeY, cubeSize, cubeSize, radius);
-      ctx.fill();
-      ctx.restore();
-
-      // Würfelfläche (Holz-Look via Gradients)
-      // Grundverlauf
-      const g = ctx.createLinearGradient(cubeX, cubeY, cubeX+cubeSize, cubeY+cubeSize);
-      g.addColorStop(0.00, "rgba(255,255,255,0.16)");
-      g.addColorStop(1.00, "rgba(0,0,0,0.08)");
-
-      const wood = ctx.createLinearGradient(cubeX, cubeY, cubeX, cubeY+cubeSize);
-      wood.addColorStop(0.00, "#d7c2a4");
-      wood.addColorStop(1.00, "#c9b08f");
-
-      // Füllung (wood + overlay)
-      drawRoundedRect(cubeX, cubeY, cubeSize, cubeSize, radius);
-      ctx.fillStyle = wood;
-      ctx.fill();
-
-      ctx.globalAlpha = 1.0;
-      ctx.fillStyle = g;
-      ctx.fill();
-
-      // leichte "Wärme/Gelb" Spots (wie dein CSS)
-      const spot1 = ctx.createRadialGradient(
-        cubeX + cubeSize*0.15, cubeY + cubeSize*0.15, 0,
-        cubeX + cubeSize*0.15, cubeY + cubeSize*0.15, cubeSize*0.9
-      );
-      spot1.addColorStop(0.0, "rgba(249,150,30,0.10)");
-      spot1.addColorStop(0.55, "rgba(249,150,30,0.00)");
-      ctx.fillStyle = spot1;
-      ctx.fill();
-
-      const spot2 = ctx.createRadialGradient(
-        cubeX + cubeSize*0.25, cubeY + cubeSize*0.25, 0,
-        cubeX + cubeSize*0.25, cubeY + cubeSize*0.25, cubeSize*0.95
-      );
-      spot2.addColorStop(0.0, "rgba(155,70,110,0.10)");
-      spot2.addColorStop(0.60, "rgba(155,70,110,0.00)");
-      ctx.fillStyle = spot2;
-      ctx.fill();
-
-      // Border
-      ctx.lineWidth = borderW;
-      ctx.strokeStyle = "#7a4a34";
-      drawRoundedRect(cubeX, cubeY, cubeSize, cubeSize, radius);
-      ctx.stroke();
-
-      // Innen-Highlight
-      ctx.lineWidth = 1;
-      ctx.strokeStyle = "rgba(255,255,255,0.10)";
-      drawRoundedRect(cubeX + borderW*0.5, cubeY + borderW*0.5, cubeSize - borderW, cubeSize - borderW, radius-1);
-      ctx.stroke();
-
-      // Slots (leer)
-      for (const s of slots){
-        // Slot Schatten
-        ctx.save();
-        ctx.shadowColor = "rgba(0,0,0,0.22)";
-        ctx.shadowBlur  = 10;
-        ctx.shadowOffsetX = 2;
-        ctx.shadowOffsetY = 3;
-
-        drawRoundedRect(s.x, s.y, slotSize, slotSize, slotR);
-        ctx.fillStyle = "#ead7be";
-        ctx.fill();
-        ctx.restore();
-
-        // Slot "Lichtkante"
-        const sg = ctx.createLinearGradient(s.x, s.y, s.x+slotSize, s.y+slotSize);
-        sg.addColorStop(0.0, "rgba(255,255,255,0.14)");
-        sg.addColorStop(1.0, "rgba(0,0,0,0.05)");
-        drawRoundedRect(s.x, s.y, slotSize, slotSize, slotR);
-        ctx.fillStyle = sg;
-        ctx.fill();
-
-        // Slot Border
-        ctx.lineWidth = slotBorderW;
-        ctx.strokeStyle = "rgba(0,0,0,0.55)";
-        drawRoundedRect(s.x, s.y, slotSize, slotSize, slotR);
-        ctx.stroke();
-
-        // Slot Innenkanten
-        ctx.lineWidth = 1;
-        ctx.strokeStyle = "rgba(255,255,255,0.18)";
-        drawRoundedRect(s.x+1, s.y+1, slotSize-2, slotSize-2, Math.max(2, slotR-1));
-        ctx.stroke();
-      }
-
-      ctx.restore(); // Spiegel-Transform zurück
     }
 
-    function render(){
-      resizeCanvasToBoard();
-      drawW1();
-    }
-
-    // Init
     window.addEventListener("load", () => {
+      setBoardSquare();
       buildGridOnce();
-      render();
-      setTimeout(render, 80);
-      requestAnimationFrame(render);
+      placeStatic();
+      setTimeout(() => { setBoardSquare(); placeStatic(); }, 80);
+      requestAnimationFrame(() => { setBoardSquare(); placeStatic(); });
     });
 
     window.addEventListener("resize", () => {
-      render();
-      requestAnimationFrame(render);
+      setBoardSquare();
+      requestAnimationFrame(() => { setBoardSquare(); placeStatic(); });
     });
   </script>
 </body>
