--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       --cube-x: calc(var(--cube-col) * var(--step));
       --cube-y: calc(var(--cube-row) * var(--step));
 
-      /* Cast-Shadow Offset (je Quadrant Richtung Mitte) */
+      /* Cast-Shadow Offset */
       --cast-x: 18px;
       --cast-y: 18px;
 
@@ -109,7 +109,6 @@
         3px 6px 16px rgba(0,0,0,0.35);
     }
 
-    /* Quadranten (W1 fix auf q0) */
     .board.q0{
       --cast-x: 18px;  --cast-y: 18px;
     }
@@ -176,7 +175,6 @@
       );
     }
 
-    /* Schatten W1 (Q0) */
     .cubeShadow{
       position:absolute;
       left: var(--cube-x);
@@ -211,7 +209,7 @@
       pointer-events: none;
     }
 
-    /* ✅ Würfelfläche W1 (ohne Random, fix Q0) */
+    /* W1 (Q0) */
     .cube{
       position:absolute;
       left: var(--cube-x);
@@ -245,11 +243,11 @@
       pointer-events: none;
     }
 
-    /* ✅ Zusätzliche Würfelfläche W2 (leer, Innenrahmen), fix in Q1 */
+    /* W2 (Q1) */
     .cube2{
       position:absolute;
-      left: calc(4 * var(--step)); /* Q1: Spalte 4 */
-      top:  calc(1 * var(--step)); /* Q1: Zeile 1 */
+      left: calc(4 * var(--step));
+      top:  calc(1 * var(--step));
 
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
@@ -279,7 +277,7 @@
       pointer-events: none;
     }
 
-    /* ===== Slots (Blättchen) ===== */
+    /* ===== Slots ===== */
     .slot{
       position:absolute;
       width: var(--cell);
@@ -303,7 +301,6 @@
         2px 2px 3px -1px rgba(0,0,0,0.20);
     }
 
-    /* ✅ ZAHLEN (Rotation bleibt drin, falls du gleich Zahlen testest) */
     .slot .num{
       position:absolute;
       inset:0;
@@ -320,33 +317,52 @@
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
       transform: rotate(var(--num-rot, 0deg));
       transform-origin: 50% 50%;
+      position: relative;
     }
 
-    /* ✅ Q0: 2B/2C liegen oben => Boden nach oben (180deg) */
+    /* ✅ Punkt für die 9 (rechts unten) */
+    .slot .num > span.n9::after{
+      content:"";
+      position:absolute;
+      width: clamp(3px, 0.55vmin, 6px);
+      height: clamp(3px, 0.55vmin, 6px);
+      border-radius: 50%;
+      background: #111;
+      right: clamp(2px, 0.55vmin, 5px);
+      bottom: clamp(2px, 0.55vmin, 5px);
+      box-shadow: 0 1px 0 rgba(255,255,255,0.25);
+    }
+
+    /* ===== Rotationen W1 (Q0) ===== */
+    /* 2B/2C: von oben lesbar => 180° */
     .board.q0 .slot-2b .num > span,
     .board.q0 .slot-2c .num > span { --num-rot: 180deg; }
 
-    /* ✅ Q0: 3D/4D liegen rechts => Boden nach rechts (90deg) */
+    /* 3D/4D: von rechts lesbar => 90° */
     .board.q0 .slot-3d .num > span,
     .board.q0 .slot-4d .num > span { --num-rot: 90deg; }
 
-    /* ===== W1 SLOT-POSITIONEN (relativ zu cube-x/y) ===== */
+    /* ===== Rotationen W2 (Q1) ===== */
+    /* 3E/4E: von links lesbar => -90° */
+    .slot2-3e .num > span,
+    .slot2-4e .num > span { --num-rot: -90deg; }
+
+    /* 2F/2G: von oben lesbar => 180° */
+    .slot2-2f .num > span,
+    .slot2-2g .num > span { --num-rot: 180deg; }
+
+    /* ===== Positionen W1 ===== */
     .slot-2b{ left: calc(var(--cube-x) + 0 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
     .slot-2c{ left: calc(var(--cube-x) + 1 * var(--step)); top:  calc(var(--cube-y) + 0 * var(--step)); }
     .slot-3d{ left: calc(var(--cube-x) + 2 * var(--step)); top:  calc(var(--cube-y) + 1 * var(--step)); }
     .slot-4d{ left: calc(var(--cube-x) + 2 * var(--step)); top:  calc(var(--cube-y) + 2 * var(--step)); }
 
-    /* ===== W2 (Q1) SLOT-POSITIONEN: 2F,2G,3E,4E =====
-       Q1 Start links/oben ist (col=4,row=1) => leftBase=4*step, topBase=1*step
-       2E..4G in der 3×3: E=(0), F=(1), G=(2); Zeilen: 2=(0),3=(1),4=(2)
-       2F => (1,0) ; 2G => (2,0) ; 3E => (0,1) ; 4E => (0,2)
-    */
+    /* ===== Positionen W2 (Q1): 2F,2G,3E,4E ===== */
     .slot2-2f{ left: calc(4 * var(--step) + 1 * var(--step)); top: calc(1 * var(--step) + 0 * var(--step)); }
     .slot2-2g{ left: calc(4 * var(--step) + 2 * var(--step)); top: calc(1 * var(--step) + 0 * var(--step)); }
     .slot2-3e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 1 * var(--step)); }
     .slot2-4e{ left: calc(4 * var(--step) + 0 * var(--step)); top: calc(1 * var(--step) + 2 * var(--step)); }
 
-    /* Controls: Button weiter runter */
     .controls{
       width: 100%;
       display:flex;
@@ -376,7 +392,6 @@
       filter: brightness(0.97);
     }
 
-    /* kleiner "blup" */
     @keyframes popIn {
       0%   { transform: rotate(var(--num-rot, 0deg)) scale(0.70); filter: brightness(1.05); }
       60%  { transform: rotate(var(--num-rot, 0deg)) scale(1.10); }
@@ -405,15 +420,15 @@
       <div class="cube" aria-label="Würfelfläche W1"></div>
 
       <!-- W2 (Q1) -->
-      <div class="cube2" aria-label="Würfelfläche W2 (leer)"></div>
+      <div class="cube2" aria-label="Würfelfläche W2"></div>
 
-      <!-- ✅ Blättchen W1 fix: 2B, 2C, 3D, 4D -->
+      <!-- W1 Slots -->
       <div class="slot slot-2b" data-slot="S1" aria-label="Slot 2B"><div class="num"><span></span></div></div>
       <div class="slot slot-2c" data-slot="S2" aria-label="Slot 2C"><div class="num"><span></span></div></div>
       <div class="slot slot-3d" data-slot="S3" aria-label="Slot 3D"><div class="num"><span></span></div></div>
       <div class="slot slot-4d" data-slot="S4" aria-label="Slot 4D"><div class="num"><span></span></div></div>
 
-      <!-- ✅ Blättchen W2 fix: 2F, 2G, 3E, 4E -->
+      <!-- W2 Slots -->
       <div class="slot slot2-2f" data-slot="T1" aria-label="Slot 2F"><div class="num"><span></span></div></div>
       <div class="slot slot2-2g" data-slot="T2" aria-label="Slot 2G"><div class="num"><span></span></div></div>
       <div class="slot slot2-3e" data-slot="T3" aria-label="Slot 3E"><div class="num"><span></span></div></div>
@@ -479,7 +494,7 @@
       grid.dataset.built = "1";
     }
 
-    // ✅ FIX: immer Q0, kein Random mehr (für W1); W2 ist fix in Q1
+    // FIX: W1 bleibt in Q0 (wie bisher)
     function applyQuadrant0(){
       boardEl.classList.remove("q1","q2","q3");
       boardEl.classList.add("q0");
@@ -489,56 +504,55 @@
 
     function sleep(ms){ return new Promise(res => setTimeout(res, ms)); }
 
-    function clearSlots(){
-      for (const el of slotSpanEls.values()) el.textContent = "";
+    function clearPops(){
       slotEls.forEach(s => s.classList.remove("pop"));
     }
 
-    function shuffle(arr){
-      for (let i = arr.length - 1; i > 0; i--){
-        const j = Math.floor(Math.random() * (i + 1));
-        [arr[i], arr[j]] = [arr[j], arr[i]];
-      }
-      return arr;
-    }
+    function setFixedNumbers(withPop=false){
+      // W1:
+      const s1 = slotSpanEls.get("S1"); // 2B
+      const s2 = slotSpanEls.get("S2"); // 2C
+      const s3 = slotSpanEls.get("S3"); // 3D
+      const s4 = slotSpanEls.get("S4"); // 4D
 
-    function draw4(){
-      const nums = Array.from({length:12}, (_,i)=>i+1);
-      shuffle(nums);
-      return nums.slice(0,4);
-    }
+      // W2:
+      const t1 = slotSpanEls.get("T1"); // 2F
+      const t2 = slotSpanEls.get("T2"); // 2G
+      const t3 = slotSpanEls.get("T3"); // 3E
+      const t4 = slotSpanEls.get("T4"); // 4E
 
-    // ✅ NUR W1 bestücken (wie gehabt)
-    async function placeFour(numbers, tempoMs){
-      const order = ["S1","S2","S3","S4"]; // 2B,2C,3D,4D
-      for(let i=0;i<4;i++){
-        const slotKey = order[i];
-        const span = slotSpanEls.get(slotKey);
-        if(!span) continue;
+      // Zahlen setzen
+      if (s1){ s1.textContent = "9";  s1.classList.add("n9"); }
+      if (s2){ s2.textContent = "11"; s2.classList.remove("n9"); }
+      if (s3){ s3.textContent = "3";  s3.classList.remove("n9"); }
+      if (s4){ s4.textContent = "7";  s4.classList.remove("n9"); }
 
-        span.textContent = String(numbers[i]);
+      if (t4){ t4.textContent = "4";  t4.classList.remove("n9"); } // 4E
+      if (t3){ t3.textContent = "5";  t3.classList.remove("n9"); } // 3E
+      if (t1){ t1.textContent = "12"; t1.classList.remove("n9"); } // 2F
+      if (t2){ t2.textContent = "2";  t2.classList.remove("n9"); } // 2G
 
-        const slotEl = slotEls.find(s => s.dataset.slot === slotKey);
-        if (slotEl){
-          slotEl.classList.remove("pop");
-          void slotEl.offsetWidth;
-          slotEl.classList.add("pop");
+      if (withPop){
+        for (const el of slotEls){
+          el.classList.remove("pop");
+          void el.offsetWidth;
+          el.classList.add("pop");
         }
-
-        await sleep(380);
+        setTimeout(clearPops, 260);
+      } else {
+        clearPops();
       }
-      slotEls.forEach(s => s.classList.remove("pop"));
     }
 
+    // Button: einfach nochmal "bestücken" (fixe Zahlen, optional mit Pop)
     let busy = false;
     async function runBestueckung(){
       if (busy) return;
       busy = true;
       btn.disabled = true;
 
-      clearSlots();
-      const W1 = draw4();
-      await placeFour(W1, 380);
+      setFixedNumbers(true);
+      await sleep(260);
 
       btn.disabled = false;
       busy = false;
@@ -552,15 +566,14 @@
       setTimeout(setBoardSquare, 80);
 
       buildGridOnce();
-
-      applyQuadrant0();  // ✅ fix Q0
-      clearSlots();
+      applyQuadrant0();
+      setFixedNumbers(false);
     });
 
     window.addEventListener("resize", () => {
       setBoardSquare();
       requestAnimationFrame(setBoardSquare);
-      applyQuadrant0();  // ✅ bleibt fix
+      applyQuadrant0();
     });
   </script>
 </body>
